--- a/EasyHarvest/i18n/default.json
+++ b/EasyHarvest/i18n/default.json
@@ -22,5 +22,7 @@
   "config.name.AnimalArtisanMachineAutoInput": "Quick Input to AnimalArtisanMachine",
   "config.tips.AnimalArtisanMachineAutoInput": "Mayonnaise Machine, Cheese Press, Loom, Oil Maker",
   "config.name.SprinklerAutoInput": "Quick cultivate around sprinkler",
-  "config.tips.SprinklerAutoInput": "Hold hoe/fertilizer/seed, press Assist Key and click sprinkler to cultivate within the range of the sprinkler"
+  "config.tips.SprinklerAutoInput": "Hold hoe/fertilizer/seed, press Assist Key and click sprinkler to cultivate within the range of the sprinkler",
+  "config.name.OtherMachineAutoInput": "Quick Input to Other Machines",
+  "config.tips.OtherMachineAutoInput": "Machines types can be edited in config.json, default include Furnace / Fish Smoker / Recycling Machine"
 }
