--- a/EasyHarvest/i18n/zh.json
+++ b/EasyHarvest/i18n/zh.json
@@ -22,5 +22,7 @@
   "config.name.AnimalArtisanMachineAutoInput": "允许一键放入动物制品工匠机器",
   "config.tips.AnimalArtisanMachineAutoInput": "包括蛋黄酱机、压酪机、织布机、产油机",
   "config.name.SprinklerAutoInput": "一键在洒水器周围耕种",
-  "config.tips.SprinklerAutoInput": "手持锄头/肥料/种子，按住辅助键，鼠标点击洒水器即可在洒水器范围内耕种"
+  "config.tips.SprinklerAutoInput": "手持锄头/肥料/种子，按住辅助键，鼠标点击洒水器即可在洒水器范围内耕种",
+  "config.name.OtherMachineAutoInput": "允许一键放入其他机器",
+  "config.tips.OtherMachineAutoInput": "机器种类可以在config.json中自定义，默认为熔炉、熏鱼机、回收机"
 }
