--- a/EasyHarvest/i18n/default.json
+++ b/EasyHarvest/i18n/default.json
@@ -24,5 +24,7 @@
   "config.name.SprinklerAutoInput": "Quick cultivate around sprinkler",
   "config.tips.SprinklerAutoInput": "Hold hoe/fertilizer/seed, press Assist Key and click sprinkler to cultivate within the range of the sprinkler",
   "config.name.OtherMachineAutoInput": "Quick Input to Other Machines",
-  "config.tips.OtherMachineAutoInput": "Machines types can be edited in config.json, default include Furnace / Fish Smoker / Recycling Machine"
+  "config.tips.OtherMachineAutoInput": "Machines types can be edited in config.json, default include Furnace / Fish Smoker / Recycling Machine etc.",
+  "config.name.AllMachineAutoInput": "Quick Input to All Machines",
+  "config.tips.AllMachineAutoInput": "Experimental function, if true, can perform batch input operations on all devices"
 }
