--- a/EasyHarvest/i18n/zh.json
+++ b/EasyHarvest/i18n/zh.json
@@ -24,5 +24,7 @@
   "config.name.SprinklerAutoInput": "一键在洒水器周围耕种",
   "config.tips.SprinklerAutoInput": "手持锄头/肥料/种子，按住辅助键，鼠标点击洒水器即可在洒水器范围内耕种",
   "config.name.OtherMachineAutoInput": "允许一键放入其他机器",
-  "config.tips.OtherMachineAutoInput": "机器种类可以在config.json中自定义，默认为熔炉、熏鱼机、回收机"
+  "config.tips.OtherMachineAutoInput": "机器种类可以在config.json中自定义，默认为熔炉、熏鱼机、回收机等",
+  "config.name.AllMachineAutoInput": "允许一键放入所有机器",
+  "config.tips.AllMachineAutoInput": "实验功能，如果启用则可以在所有设备上进行批量放入操作"
 }
