--- a/PolyamorySweetLove/i18n/zh.json
+++ b/PolyamorySweetLove/i18n/zh.json
@@ -1,27 +1,28 @@
-﻿{
-    "confrontation-female": "你必须和我们所有人结婚!",
-    "confrontation-male": "你必须和我们所有人结婚!",
-    "divorce_complex": "这很复杂...",
-    "divorce_fault_q": "离婚是谁的错?",
-    "divorce_fault_1": "我的错.#my_#1",
-    "divorce_fault_2": "我配偶的错.#their_#3",
-    "divorce_fault_3": "这都是尤巴的错!#yoba_#1",
-    "divorce_fault_4": "没有人应该为此负责.#no_#0",
-    "divorce_my_reason_q": "你为何有错?",
-    "divorce_my_reason_1": "我背叛了我的配偶.#3",
-    "divorce_my_reason_2": "我爱上了另一个人.#2",
-    "divorce_my_reason_3": "我爱我的配偶不如他们爱我那么多.#0",
-    "divorce_their_reason_q": "为何错在你的配偶?",
-    "divorce_their_reason_1": "我的配偶背叛了我.#3",
-    "divorce_their_reason_2": "我认为我的配偶对我不忠.#2",
-    "divorce_their_reason_3": "我的配偶不再爱我了.#1",
-    "divorce_yoba_reason_q": "尤巴对你做了什么?",
-    "divorce_yoba_reason_1": "尤巴和我配偶私通.#3",
-    "divorce_yoba_reason_2": "尤巴诅咒了我的婚姻.#0",
-    "divorce_yoba_reason_3": "我的配偶爱尤巴胜过爱我.#1",
-    "divorce_method_q": "离婚费用该由谁支付?",
-    "divorce_method_1": "我想自己付离婚费.#100#0",
-    "divorce_method_2": "我们应该平摊离婚费用.#50#2",
-    "divorce_method_3": "我认为应该由我的配偶支付.#0#4",
-    "divorce_method_4": "应该让尤巴来支付.#150#0"
+{
+    "confrontation-female": "你将不得不和我们所有人结婚！",
+    "confrontation-male": "你将不得不和我们所有人结婚！",
+    "divorce_who": "你想和谁离婚？",
+    "divorce_complex": "情况很复杂...",
+    "divorce_fault_q": "离婚是谁的错？",
+    "divorce_fault_1": "我有错。#我的_#1",
+    "divorce_fault_2": "错的是我配偶。#他们的_#3\"",
+    "divorce_fault_3": "这就是由巴的错！#由巴_#1",
+    "divorce_fault_4": "没有人错的离婚。#没有人_#0",
+    "divorce_my_reason_q": "你有什么错？",
+    "divorce_my_reason_1": "我欺骗了我的配偶。#3",
+    "divorce_my_reason_2": "我爱上了另一个人。#2",
+    "divorce_my_reason_3": "我不像配偶爱我那样爱我的配偶。#0",
+    "divorce_their_reason_q": "他们有什么错？",
+    "divorce_their_reason_1": "我的配偶欺骗了我。#3",
+    "divorce_their_reason_2": "我认为我的配偶在欺骗我。#2",
+    "divorce_their_reason_3": "我的配偶不再爱我了。#1",
+    "divorce_yoba_reason_q": "由巴对你做了什么？",
+    "divorce_yoba_reason_1": "由巴与我的妻子有染。#3",
+    "divorce_yoba_reason_2": "由巴诅咒我的婚姻。#0",
+    "divorce_yoba_reason_3": "我的妻子更爱由巴。#1",
+    "divorce_method_q": "谁应该为离婚付费？",
+    "divorce_method_1": "我想为离婚付费。#100#0",
+    "divorce_method_2": "我们应该各自分担离婚50/50的费用。#50#2",
+    "divorce_method_3": "我想让配偶为离婚付费。#0#4",
+    "divorce_method_4": "由巴应该为离婚付费。#150#0"
 }
