--- a/PolyamorySweetWedding/i18n/zh.json
+++ b/PolyamorySweetWedding/i18n/zh.json
@@ -1,5 +1,5 @@
-﻿{
-  "ask-x-to-witness": "请 {0} 在婚礼上担任你的见证人？",
-  "witness-accept": "当然！我很荣幸成为你的见证人！$h",
-  "witness-decline": "对不起，我不喜欢那样做。$s"
+{
+    "ask-x-to-witness": "请求{0}在婚礼上充当你的见证人？?",
+    "witness-accept": "当然！我很荣幸能成为你的见证人！$h",
+    "witness-decline": "抱歉，我不愿意这样做。$s"
 }
